<resources>
    <string name="app_name">Apps Story</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_login"> picture Logo Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="learn_now">Login</string>
    <string name="title">Welcome To Dicoding Story !</string>
    <string name="desc"> Mau Berbagi Ilmu Tentang Android, IOS, Mechine Learning, Front End, Back End Dan bidang IT lainya? Di Dicoding Story Aja</string>
    <string name="masuk">Sign In</string>
    <string name="dafar">Register</string>
    <string name="nama_anda">Your Name</string>
    <string name="itemfavorit">Item Favorit</string>
    <string name="titel">Title</string>
    <string name="list_daftar_favorit">Regiser Favorit</string>
    <string name="logout">Logout</string>
    <string name="tambah_cerita">Add Cerita</string>
    <string name="deskripsi">Description</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please select an image before proceeding.</string>
    <string name="Date">Date</string>
    <string name="_4_5_413">4.5 (413)</string>
</resources>