<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <group android:menuCategory="container">
                <item
                    android:id="@+id/listItemFavorit"
                    android:title="@string/list_daftar_favorit"
                    android:icon="@drawable/ic_star_1"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/addStory"
                    android:icon="@drawable/ic_add"
                    app:showAsAction="ifRoom"
                    android:title="@string/tambah_cerita"
                    />
                <item
                    android:id="@+id/logoutButton"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout"
                    app:showAsAction="never" />
        </group>
</menu>